Add step execution metrics and summary information